@@ -3,6 +3,8 @@ NAS4Free 9.1.0.1 - Sandstorm
 
 Changes:
 
+- Add LiveUSB mode as same as LiveCD.
+- Change to CHS=x,255,63 of embedded image.
 - v9.6 config is forever marked as a blacklist.
 - Load zfs.ko and opensolaris.ko from loader.
 - Add upgrade method from old system.
